--- a/src/app/tarifas/tarifas.component.html
+++ b/src/app/tarifas/tarifas.component.html
@@ -9,7 +9,7 @@
 
   <!-- Tarjetas -->
   <main class="max-w-5xl mx-auto px-4">
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-6 animate-fade-up">
       <!-- Tarjeta 1 -->
       <div
         class="bg-white rounded-lg shadow-lg overflow-hidden flex flex-col  mb-4 transform transition duration-300 hover:-translate-y-2 hover:shadow-xl">
